--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,13 +1,12 @@
-.form {
-  margin: 16px 20% 0;
-}
 .formGroup {
   margin-bottom: 16px;
 }
+
 .formLabel {
   margin-bottom: 8px;
   display: inline-block;
 }
+
 .formInput {
   display: block;
   width: 100%;
@@ -18,4 +17,14 @@
   background-color: #fff;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
+  appearance: none;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.formInput:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
